--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
-    "name":"package.json",
-    "version": "1.0.0",
-    "description": "Database for tracking employees",
-    "main": "eeTracker.js",
-    "scripts": {
-        "test": "echo\"Error: no test specified\" && exit 1",
-        "start": "node eeTracker.js"
-    },
-    "repository": {
-        "type":"git",
-        "url": "git+needtofillthisout"
-    },
-    "keywords": [],
-    "author": "Julia Kiser",
-    "license": "ISC",
-    "bugs":{
-        "url": "https://put in link to github issues"
-    },
-    "homepage": "readmelink",
-    "dependencies": {
-        "inquirer": "^7.1.0",
-        "mysql":"^2.18.1"
-    }
+  "name": "Employee-Tracker",
+  "version": "1.0.0",
+  "description": "Developers are often tasked with creating interfaces that make it easy for non-developers to view and interact with information stored in databases. Often these interfaces are known as **C**ontent **M**anagement **S**ystems. In this homework assignment, your challenge is to architect and build a solution for managing a company's employees using node, inquirer, and MySQL.",
+  "main": "eeTracker.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JuliaKiser/Employee.Tracker.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JuliaKiser/Employee.Tracker/issues"
+  },
+  "homepage": "https://github.com/JuliaKiser/Employee.Tracker#readme",
+  "dependencies": {
+    "mysql": "^2.18.1"
+  }
 }
