--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/JuliaKiser/Employee.Tracker#readme",
   "dependencies": {
+    "inquirer": "^8.0.0",
     "mysql": "^2.18.1"
   }
 }
